external-crates/move/crates/move-compiler/tests/move_check/typing/assert_arity.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04016]: too few arguments
  ┌─ tests/move_check/typing/assert_arity.move:4:9
  │
4 │         assert!();
  │         ^^^^^^^^^
  │         │      │
  │         │      Found 0 argument(s) here
  │         Invalid call of 'assert'. The call expected 2 argument(s) but got 0

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/typing/assert_arity.move:5:9
  │
5 │         assert!(true);
  │         ^^^^^^ Clever `assert!`, `abort`, and `#[error]` are not supported by current edition 'legacy'; the '2024' edition supports this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E04017]: too many arguments
  ┌─ tests/move_check/typing/assert_arity.move:7:9
  │
7 │         assert!(true, 1, 2u64);
  │         ^^^^^^^^^^^^^^^^^^^^^^
  │         │      │
  │         │      Found 3 argument(s) here
  │         Invalid call of 'assert'. The call expected 2 argument(s) but got 3

error[E06002]: use of unassigned variable
   ┌─ tests/move_check/typing/assert_arity.move:12:9
   │
11 │         move x;
   │         ------
   │         │
   │         The value of 'x' was previously moved here.
   │         Suggestion: use 'copy x' to avoid the move.
12 │         move x;
   │         ^^^^^^ Invalid usage of previously moved variable 'x'.

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/typing/assert_arity.move:18:9
   │
18 │         assert();
   │         ^^^^^^^^ 'assert' function syntax has been deprecated and will be removed
   │
   = Replace with 'assert!'. 'assert' has been replaced with a 'assert!' built-in macro so that arguments are no longer eagerly evaluated

error[E04016]: too few arguments
   ┌─ tests/move_check/typing/assert_arity.move:18:9
   │
18 │         assert();
   │         ^^^^^^^^
   │         │     │
   │         │     Found 0 argument(s) here
   │         Invalid call of 'assert'. The call expected 2 argument(s) but got 0

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/typing/assert_arity.move:19:9
   │
19 │         assert(true);
   │         ^^^^^^ Clever `assert!`, `abort`, and `#[error]` are not supported by current edition 'legacy'; the '2024' edition supports this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/typing/assert_arity.move:19:9
   │
19 │         assert(true);
   │         ^^^^^^^^^^^^ 'assert' function syntax has been deprecated and will be removed
   │
   = Replace with 'assert!'. 'assert' has been replaced with a 'assert!' built-in macro so that arguments are no longer eagerly evaluated

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/typing/assert_arity.move:20:9
   │
20 │         assert(true, 1);
   │         ^^^^^^^^^^^^^^^ 'assert' function syntax has been deprecated and will be removed
   │
   = Replace with 'assert!'. 'assert' has been replaced with a 'assert!' built-in macro so that arguments are no longer eagerly evaluated

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/typing/assert_arity.move:21:9
   │
21 │         assert(true, 1, 2u64);
   │         ^^^^^^^^^^^^^^^^^^^^^ 'assert' function syntax has been deprecated and will be removed
   │
   = Replace with 'assert!'. 'assert' has been replaced with a 'assert!' built-in macro so that arguments are no longer eagerly evaluated

error[E04017]: too many arguments
   ┌─ tests/move_check/typing/assert_arity.move:21:9
   │
21 │         assert(true, 1, 2u64);
   │         ^^^^^^^^^^^^^^^^^^^^^
   │         │     │
   │         │     Found 3 argument(s) here
   │         Invalid call of 'assert'. The call expected 2 argument(s) but got 3

error[E06002]: use of unassigned variable
   ┌─ tests/move_check/typing/assert_arity.move:26:9
   │
25 │         move x;
   │         ------
   │         │
   │         The value of 'x' was previously moved here.
   │         Suggestion: use 'copy x' to avoid the move.
26 │         move x;
   │         ^^^^^^ Invalid usage of previously moved variable 'x'.

error[E01002]: unexpected token
   ┌─ tests/move_check/typing/assert_arity.move:29:1
   │
29 │ 
   │ ^
   │ 
   │ Unexpected end-of-file
   │ Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'
